// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should stop correctly on loadingBatchError event with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadingBatchError",
  "endLoadingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on loadingBatchError event with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadingBatchError",
  "endLoadingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on processingError event with error - false 1`] = `
[
  "startProcessing",
  "processingError",
  "endProcessing",
]
`;

exports[`should stop correctly on processingError event with error - true 1`] = `
[
  "startProcessing",
  "processingError",
  "endProcessing",
]
`;

exports[`should stop correctly on rowGenerationError event with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerationError",
  "endProcessingRow",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on rowGenerationError event with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerationError",
  "endProcessingRow",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events endLoadingBatch with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadedBatch",
  "endLoadingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events endLoadingBatch with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadedBatch",
  "endLoadingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events endProcessing with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadedBatch",
  "endLoadingBatch",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadedBatch",
  "endLoadingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events endProcessing with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadedBatch",
  "endLoadingBatch",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadedBatch",
  "endLoadingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events endProcessingRow with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events endProcessingRow with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events endProcessingStream with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadedBatch",
  "endLoadingBatch",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadedBatch",
  "endLoadingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events endProcessingStream with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadedBatch",
  "endLoadingBatch",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadedBatch",
  "endLoadingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events endTransformingBatch with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events endTransformingBatch with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events loadedBatch with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadedBatch",
  "endLoadingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events loadedBatch with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "loadedBatch",
  "endLoadingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events loadingBatch with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "endLoadingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events loadingBatch with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "loadingBatch",
  "endLoadingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events rowGenerated with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events rowGenerated with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events startProcessing with error - false 1`] = `
[
  "startProcessing",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events startProcessing with error - true 1`] = `
[
  "startProcessing",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events startProcessingRow with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "endProcessingRow",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events startProcessingRow with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "endProcessingRow",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events startProcessingStream with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events startProcessingStream with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events transformedBatch with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events transformedBatch with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformedBatch",
  "endTransformingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events transformingBatch with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "endTransformingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on successfull events transformingBatch with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "endTransformingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on transformingBatchError event with error - false 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformingBatchError",
  "endTransformingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;

exports[`should stop correctly on transformingBatchError event with error - true 1`] = `
[
  "startProcessing",
  "startProcessingStream",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "startProcessingRow",
  "rowGenerated",
  "endProcessingRow",
  "transformingBatch",
  "transformingBatchError",
  "endTransformingBatch",
  "endProcessingStream",
  "endProcessing",
]
`;
